@@ -27,6 +27,7 @@ import org.infinispan.server.hotrod.tx.table.GlobalTxTable;
 import org.infinispan.server.hotrod.tx.table.PerCacheTxTable;
 import org.infinispan.transaction.LockingMode;
 import org.infinispan.transaction.TransactionMode;
+import org.infinispan.transaction.lookup.EmbeddedTransactionManagerLookup;
 import org.testng.annotations.Test;
 
 /**
@@ -61,7 +62,7 @@ public class TxFunctionalTest extends HotRodMultiNodeTest {
       final byte[] k2 = k(method, "k2");
       final byte[] v1 = v(method, "v1");
       final byte[] v2 = v(method, "v2");
-      RemoteTransaction tx = RemoteTransaction.startTransaction(clients().get(0));
+      RemoteTransaction tx = RemoteTransaction.startTransaction(clients().getFirst());
       tx.set(k1, v1);
       tx.getAndAssert(k1, v1);
       tx.set(k2, v2);
@@ -106,7 +107,7 @@ public class TxFunctionalTest extends HotRodMultiNodeTest {
       final byte[] v1 = v(method, "v1");
       final byte[] v2 = v(method, "v2");
 
-      RemoteTransaction tx = RemoteTransaction.startTransaction(clients().get(0));
+      RemoteTransaction tx = RemoteTransaction.startTransaction(clients().getFirst());
 
       tx.getAndAssert(k1, null);
       tx.set(k1, v1);
@@ -132,7 +133,7 @@ public class TxFunctionalTest extends HotRodMultiNodeTest {
       final byte[] v2 = v(method, "v2");
       final byte[] v1_1 = v(method, "v1_1");
 
-      RemoteTransaction tx = RemoteTransaction.startTransaction(clients().get(0));
+      RemoteTransaction tx = RemoteTransaction.startTransaction(clients().getFirst());
       tx.getAndAssert(k1, null);
       tx.set(k1, v1);
       tx.getAndAssert(k1, v1);
@@ -215,7 +216,7 @@ public class TxFunctionalTest extends HotRodMultiNodeTest {
       final byte[] k2 = k(method, "k2");
       final byte[] v1 = v(method, "v1");
       final byte[] v2 = v(method, "v2");
-      RemoteTransaction tx = RemoteTransaction.startTransaction(clients().get(0));
+      RemoteTransaction tx = RemoteTransaction.startTransaction(clients().getFirst());
       tx.set(k1, v1);
       tx.getAndAssert(k1, v1);
       tx.set(k2, v2);
@@ -270,7 +271,7 @@ public class TxFunctionalTest extends HotRodMultiNodeTest {
       final byte[] v2 = v(method, "v2");
 
 
-      RemoteTransaction tx = RemoteTransaction.startTransaction(clients().get(0));
+      RemoteTransaction tx = RemoteTransaction.startTransaction(clients().getFirst());
       tx.getAndAssert(k1, null);
       tx.set(k1, v1);
       tx.getAndAssert(k1, v1);
@@ -297,7 +298,7 @@ public class TxFunctionalTest extends HotRodMultiNodeTest {
       final byte[] v1_1 = v(method, "v1_1");
 
 
-      RemoteTransaction tx = RemoteTransaction.startTransaction(clients().get(0));
+      RemoteTransaction tx = RemoteTransaction.startTransaction(clients().getFirst());
       tx.getAndAssert(k1, null);
       tx.set(k1, v1);
       tx.getAndAssert(k1, v1);
@@ -507,7 +508,7 @@ public class TxFunctionalTest extends HotRodMultiNodeTest {
       final byte[] v2 = v(method, "v2");
 
 
-      RemoteTransaction tx = RemoteTransaction.startTransaction(clients().get(0));
+      RemoteTransaction tx = RemoteTransaction.startTransaction(clients().getFirst());
       tx.set(k1, v1);
       tx.set(k2, v2);
       tx.getAndAssert(k1, v1);
@@ -540,6 +541,7 @@ public class TxFunctionalTest extends HotRodMultiNodeTest {
       ConfigurationBuilder builder = hotRodCacheConfiguration();
       builder.transaction().transactionMode(TransactionMode.TRANSACTIONAL);
       builder.transaction().lockingMode(lockingMode);
+      builder.transaction().transactionManagerLookup(new EmbeddedTransactionManagerLookup());
       switch (transactionMode) {
          case NON_XA:
             builder.transaction().useSynchronization(true);
